DemoApp/nginxhello-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginxhello-rc
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: nginxhello
    spec:
      containers:
      - name: nginxhello
        image: nginxdemos/hello
        ports:
        - containerPort: 80
