DemoApp/nginxhello.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginxhello-rc
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: nginxhello
    spec:
      containers:
      - name: nginxhello
        image: nginxdemos/hello
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginxhello-svc
  labels:
    app: nginxhello
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: nginxhello
