DemoApp/nginxhello-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo-ingress-nginx
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: nginxhello.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginxhello-svc
          servicePort: 80
